# Crane-Airlines-YT-FIDS

./: .dockerignore  .gitignore  Dockerfile  Readme.md  app.py  pyproject.toml  render.yaml  requirements-dev.txt  requirements.txt  test_flask_server.py  test_flight_management.py  test_html_output.py  test_long_text.py  test_tab_click.py  test_text_wrap.py
assets/fonts/: README.md
crane_fids/: __init__.py  application.py  config.py  dynamic_provider.py  flight_manager.py  logging_setup.py  models.py  stream_engine.py
crane_fids/renderer/: __init__.py  board.py  context.py  fonts.py  layers.py  theme.py
tests/: __init__.py  test_application.py  test_domain.py  test_renderer_and_stream.py
