[project]
name = "crane-airlines-yt-fids"
version = "1.0.0"
description = "Airport style Flight Information Display System streamed to YouTube"
requires-python = ">=3.12"
dependencies = ["pillow>=11.0"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "C4", "SIM", "ARG", "PL", "RUF"]
ignore = ["PLR0913"]

[tool.ruff.lint.per-file-ignores]
# Layers and engines implement fixed interfaces: not every implementation uses
# every parameter of the contract it fulfils.
"crane_fids/renderer/layers.py" = ["ARG002"]
"crane_fids/stream_engine.py" = ["ARG002"]
"tests/*" = ["ARG", "PLR2004", "SLF001", "E501"]

[tool.mypy]
python_version = "3.12"
warn_unused_ignores = true
disallow_untyped_defs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
